# esp32-template

./: .buildinfo  .gitattributes  .gitignore  .on-attach-ran  .on-start-ran  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  Features-completed.md  Features-intended.md  Features-planned.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QEMU-IP-TUNNEL-FLOW.md  README.md  TODO-JSON-Config-System.md  consistency-findings.md  copilot_issue_display_logic.md  copilot_issue_static_web_interface.md  emulator-support.html  genindex.html  github_issue_refactor.md  index.html  known-limitations.html  mkdocs.yml  needs.json  objects.inv  schema_violations.json  sdkconfig  search.html  searchindex.js
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  on-start.sh  post-start.sh  setup-vnc.sh
.devcontainer_option/: devcontainer.json
.doctrees/: emulator-support.doctree  environment.pickle  index.doctree  known-limitations.doctree
.github/: BUILD_INSTRUCTIONS.md  README.md  copilot-instructions.md
.playwright-mcp/: esp32-distance-config.json
10_architecture/: index.html  overview.html
11_requirements/: config-manager.html  index.html  netif-tunnel.html  req_config_manager.html  req_netif_tunnel.html  req_system.html  req_web_server.html  system.html  web-server.html
12_design/: config-manager.html  high-level-architecture.html  index.html  spec_config_manager.html  spec_high_level_architecture.html  system-architecture.html
21_api/: index.html
31_traceability/: index.html
90_guides/: debugging.html  devcontainer.html  index.html  known-issues.html  qemu-emulator.html  qemu-network-internals.html
_images/: needflow-084ecb44807a80ae78c23633b3768dd89dd8c991.png.map  needflow-23b3ca3927e4d8e8ea98a0dcbed6e324f2c1b693.png.map  needflow-2be012b2a4820278b2e21a280a45d39179f9852b.png.map  needflow-2d8006088a86f75775c4076a77b9cbaf0a15f51e.png.map  needflow-3a5190bd230cd0821bc0d4df1b613e7b6e1a2ad0.png.map  needflow-6a673bd48f73c88a3a97aecd8562ddd0fe83c3e5.png.map  needflow-797d4b070156a4f17bf98850b49a155d9c573a58.png.map  needflow-800bd860c348befc10b9eaeb6ea771ec0359780c.png.map  needflow-8cd3a5979475b3e64e726ef916b63077d94c6b74.png.map  needflow-a7b1f1c6eda3ffe68b415ca5354c5b4cf005b5e2.png.map  needflow-b0753c4704768adeabb6b3836096f7460b5c385f.png.map  needflow-eedb337341893fb2a93ff39258239a9902555070.png.map  needflow-f3ec94f6ca17bbfe510f952e2ffc8d289e591740.png.map
_sources/: index.rst.txt
components/cert_handler/: CMakeLists.txt
design/: README.html  config-design.html  system-design.html
development/: README.html  debugging.html  devcontainer.html  pre-commit-hooks.html  qemu-emulator.html  qemu-network-internals.html
docs/: .oft.yml  README.md  conf.py  emulator-support.md  index.md  index.rst  known-limitations.md  requirements.txt
docs/12_design/: index.rst  (+7 more)
docs_old/: conf.py  index.rst
legal/: datenschutz.html  impressum.html
main/: CMakeLists.txt  Kconfig.projbuild  config.h  config_manager.c  config_manager.h  display_logic.c  display_logic.h  dns_server.c  dns_server.h  led_controller.c  led_controller.h  main.c  test_task.c  test_task.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  wifi_manager_new.c  wifi_manager_old.c
main/components/cert_handler/: CMakeLists.txt  cert_handler.c  cert_handler.h
main/components/config_manager/: CMakeLists.txt  config_manager.c  config_manager.h
main/components/display_logic/: CMakeLists.txt  display_logic.c  display_logic.h
main/components/distance_sensor/: CMakeLists.txt  distance_sensor.c  distance_sensor.h  distance_sensor_sim.c
main/components/led_controller/: CMakeLists.txt  led_controller.c  led_controller.h  led_controller_sim.c
main/components/netif_uart_tunnel/: CMakeLists.txt  netif_uart_tunnel_sim.c
main/components/netif_uart_tunnel/include/: netif_uart_tunnel_sim.h
main/components/startup_tests/: led_color_test.c  led_color_test.h  led_running_test.c  test_task.c
main/components/web_server/: CMakeLists.txt  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  wifi_manager_sim.c
main/components/web_server/www/: index.html  settings.html  wifi-setup.html
main/components/web_server/www/js/: app.js
main/test/: led_color_test.c  led_color_test.h  led_running_test.c  led_running_test.h  test_task.c  test_task.h
main/www/: index.html  settings.html  settings_old.html
main/www/css/: style.css
main/www/js/: app.js
needs_id/: REQ_CFG_1.json  REQ_CFG_10.json  REQ_CFG_11.json  REQ_CFG_2.json  REQ_CFG_3.json  REQ_CFG_4.json  REQ_CFG_5.json  REQ_CFG_6.json  REQ_CFG_7.json  REQ_CFG_8.json  REQ_CFG_9.json  REQ_NETIF_TUNNEL_1.json  REQ_NETIF_TUNNEL_2.json  REQ_NETIF_TUNNEL_3.json  REQ_NETIF_TUNNEL_4.json  REQ_NETIF_TUNNEL_5.json  REQ_NETIF_TUNNEL_DOC_1.json  REQ_NETIF_TUNNEL_NF_1.json  REQ_NETIF_TUNNEL_NF_2.json  REQ_SYS_ARCH_1.json  REQ_SYS_CFG_1.json  REQ_SYS_HW_1.json  REQ_SYS_NET_1.json  REQ_SYS_PERF_1.json  REQ_SYS_REL_1.json  REQ_SYS_SIM_1.json  REQ_SYS_WEB_1.json  REQ_WEB_1.json  REQ_WEB_2.json  REQ_WEB_3.json  REQ_WEB_4.json  REQ_WEB_5.json  REQ_WEB_NF_1.json  REQ_WEB_NF_2.json  SPEC_ARCH_BUILD_1.json  SPEC_ARCH_CERT_1.json  SPEC_ARCH_CODESPACES_1.json  SPEC_ARCH_COMM_1.json  SPEC_ARCH_CONFIG_1.json  SPEC_ARCH_CONFIG_FLOW_1.json  (+42 more)
requirements/: README.html  config-requirements.html  system-requirements.html  web-server-requirements.html
temp/: CODING_AGENT_PLAN.md  GITHUB_CODING_AGENT_TASK.md  IMPLEMENTATION_SUMMARY.md  README.md  emulator-support-issue.md
tools/: attach-esp32.bat  attach-esp32.ps1  ensure-network-stack.sh  generate_cert.py  http_proxy.py  on-attach.sh  on-create.sh  on-start.sh  run-qemu-graphics-run.sh  run-qemu-graphics.sh  run-qemu-network.sh  run_qemu.sh  run_qemu_debug.sh  run_qemu_dual_uart.sh  run_qemu_dual_uart_debug.sh  serial_tun_bridge.py  start-vnc.sh  stop_qemu.sh  switch-keyboard.sh  test_crypto.bat  test_crypto.py  test_generate.bat  view_uart1.sh
workshop/: BUILD-FLASH-INSTRUCTIONS.md  CODESPACES-GUIDE.md  COPILOT-PROMPTS.md  ISSUE-MCP-EXERCISE.md  README.md  WORKSHOP-BRAINSTORM.md
(+140 files in other folders)
